--- a/assets/style.css
+++ b/assets/style.css
@@ -283,8 +283,8 @@ input:checked + .slider:before {
     font-size: 0.8rem;
   }
   .wrapper {
-    padding-left: 5%;
-    padding-right: 5%;
+    padding-left: 0;
+    padding-right: 0;
   }
   .characterTypeSelector {
     font-size: 12px;
@@ -307,4 +307,8 @@ input:checked + .slider:before {
   #password {
     padding-top: 10px;
     font-size: .8rem;
+  }
+  .card {
+    padding: 0px 20px;
+  }
 }
